[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apiforgepy"
version = "4.0.0"

description = "API observability & intelligence for FastAPI/Starlette — local-first, privacy-first"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "APIForge" }]
keywords = ["api", "observability", "monitoring", "fastapi", "starlette", "metrics", "performance", "middleware", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.27",
]

[project.optional-dependencies]
dev = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "uvicorn>=0.29",
    "ruff>=0.8",
]

[project.urls]
Homepage      = "https://apiforge-organisation.github.io/docs/"
Repository    = "https://github.com/APIForge-Organisation/sdk-python"
Documentation = "https://apiforge-organisation.github.io/docs/"
Changelog     = "https://github.com/APIForge-Organisation/sdk-python/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["apiforgepy*"]

[tool.setuptools.package-data]
# Vendored React/Babel UMD runtime served by the local dashboard (no CDN fetch).
apiforgepy = ["assets/*.js"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# dashboard.py embeds the dashboard-ui HTML/JS as a Python string (auto-synced,
# not hand-written), so line-length doesn't apply to it.
"apiforgepy/dashboard.py" = ["E501"]
